refactor: moved yamls out of src folder
